--- a/stylesheets/scss/components/_code.scss
+++ b/stylesheets/scss/components/_code.scss
@@ -10,7 +10,11 @@
 }
 
 code, pre {
-
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	word-wrap: break-word;
 	background: $grey-300;
 	font-family: 'Source Code Pro', Monospaced;
 	padding: remCalc(5px);
