--- a/stylesheets/scss/components/_selection.scss
+++ b/stylesheets/scss/components/_selection.scss
@@ -4,7 +4,7 @@
  * http://www.google.com/design/spec/components/selection-controls.html
  * TODO add hovers
  * TODO add radials for mobile
- * TODO fix animation of thumb sliding
+ * TODO add animation of thumb sliding
  **************************************/
 
 input[type="checkbox"] {
