--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -26,3 +26,4 @@
 @import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
 @import 'components/sliders'; // Used to style sliders (can be turned off)
 @import 'components/selection'; // Used to style selection controls (checkbox, radio button, switch) (can be turned off)
+@import 'components/textfields'; // Used to style input (can be turned off)
