Cleared JavaScript files, added more settings for a couple components, added a few fixes, started with progress and activity

--- a/stylesheets/scss/components/_appbar.scss
+++ b/stylesheets/scss/components/_appbar.scss
@@ -12,6 +12,8 @@
 	width: 100%;
 	height: $appbar-small-height;
 	line-height: normal;
+	position: relative;
+	z-index: 1;
 
 	@media #{$small-up} {
 		height: $appbar-medium-height;
