--- a/stylesheets/scss/components/_textfields.scss
+++ b/stylesheets/scss/components/_textfields.scss
@@ -2,9 +2,11 @@
  * Text fields
  *
  * http://www.google.com/design/spec/components/text-fields.html
+ * TODO Fix label click on single-line input
  **************************************/
 
-.sm-input {
+// Floating inputs
+.sm-floating-input {
 	height: remCalc(72px);
 	padding: remCalc(16px) 0 remCalc(8px) 0;
 	position: relative;
@@ -29,6 +31,10 @@
 				bottom: remCalc(40px);
 			}
 		}
+
+		&.sm-disabled {
+			border-bottom: remCalc(2px) dotted $grey
+		}
 	}
 
 	label {
@@ -42,6 +48,153 @@
 			font-size: remCalc(12px);
 			color: $grey;
 			bottom: remCalc(40px);
+		}
+	}
+}
+
+.sm-floating-dense-input {
+	height: remCalc(60px);
+	padding: remCalc(12px) 0 remCalc(4px) 0;
+	position: relative;
+
+	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
+		width: 100%;
+		border: 0;
+		position: absolute;
+		font-size: remCalc(13px);
+		border-bottom: remCalc(2px) solid $grey;
+		outline: none;
+		padding: remCalc(4px) 0;
+		@include transition(all 300ms ease-in-out);
+		bottom: remCalc(12px);
+
+		&:active, &:focus {
+			border-bottom: remCalc(2px) solid $main-color;
+
+			+ label {
+				color: $main-color;
+				bottom: remCalc(29px);
+			}
+		}
+
+		&.sm-disabled {
+			border-bottom: remCalc(2px) dotted $grey
+		}
+	}
+
+	label {
+		color: $grey;
+		position: absolute;
+		bottom: remCalc(12px);
+		font-size: remCalc(13px);
+		@include transition(all 300ms ease-in-out);
+		cursor: text;
+
+		&.sm-active {
+			color: $grey;
+			bottom: remCalc(29px);
+		}
+	}
+}
+
+// Single line inputs
+.sm-single-input {
+	height: remCalc(48px);
+	padding: remCalc(16px) 0 remCalc(8px) 0;
+	position: relative;
+
+	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
+		width: 100%;
+		border: 0;
+		position: absolute;
+		font-size: remCalc(16px);
+		border-bottom: remCalc(2px) solid $grey;
+		outline: none;
+		padding: remCalc(8px) 0;
+		@include transition(all 300ms ease-in-out);
+		bottom: remCalc(16px);
+
+		&:active, &:focus {
+			border-bottom: remCalc(2px) solid $main-color;
+
+			+ label {
+				display: none;
+			}
+
+			+ .material-icons {
+				color: $main-color;
+			}
+		}
+
+		&.sm-disabled {
+			border-bottom: remCalc(2px) dotted $grey
+		}
+	}
+
+	.material-icons {
+		height: remCalc(48px - 16px);
+		width: remCalc(48px - 16px);
+		font-size: remCalc(24px);
+		padding: remCalc(16px);
+		position: inherit;
+		margin-top: remCalc(-16px);
+	}
+
+	label {
+		color: $grey;
+		position: absolute;
+		bottom: remCalc(16px);
+		font-size: remCalc(16px);
+		@include transition(all 300ms ease-in-out);
+		cursor: text;
+		display: block;
+
+		&.sm-active {
+			display: none;
+		}
+	}
+}
+
+.sm-single-dense-input {
+	height: remCalc(40px);
+	padding: remCalc(12px) 0;
+	position: relative;
+
+	input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="url"] {
+		width: 100%;
+		border: 0;
+		position: absolute;
+		font-size: remCalc(13px);
+		border-bottom: remCalc(2px) solid $grey;
+		outline: none;
+		padding: remCalc(4px) 0;
+		@include transition(all 300ms ease-in-out);
+		bottom: remCalc(12px);
+
+		&:active, &:focus {
+			border-bottom: remCalc(2px) solid $main-color;
+
+			+ label {
+				display: none;
+			}
+		}
+
+		&.sm-disabled {
+			border-bottom: remCalc(2px) dotted $grey
+		}
+	}
+
+	label {
+		color: $grey;
+		position: absolute;
+		bottom: remCalc(12px);
+		font-size: remCalc(13px);
+		@include transition(all 300ms ease-in-out);
+		cursor: text;
+		display: block;
+
+		&.sm-active {
+			display: none;
 		}
 	}
 }
