--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -4,7 +4,7 @@
  * Some may be turned off by commenting them
  **************************************/
 
-@import 'components/mixins';
+@import 'components/mixins'; // All mixins
 @import 'components/functions'; // All functions
 @import 'components/colors'; // Color swatches
 @import 'components/settings'; // All settings
@@ -27,3 +27,4 @@
 @import 'components/sliders'; // Used to style sliders (can be turned off)
 @import 'components/selection'; // Used to style selection controls (checkbox, radio button, switch) (can be turned off)
 @import 'components/textfields'; // Used to style input (can be turned off)
+@import 'components/progress'; // Used to style progress and activity indicators (can be turned off)
