--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -3,6 +3,7 @@
  *
  * http://www.google.com/design/spec/components/buttons.html
  * http://www.google.com/design/spec/components/buttons-floating-action-button.html
+ * TODO add dropdown buttons
  **************************************/
 
 button, input[type="button"], input[type="reset"], input[type="submit"], a {
