--- a/stylesheets/scss/components/_cards.scss
+++ b/stylesheets/scss/components/_cards.scss
@@ -2,6 +2,8 @@
  * Cards
  *
  * http://www.google.com/design/spec/components/cards.html#cards-usage
+ * TODO add more styling to cards
+ * TODO add more varieties of cards
  **************************************/
 
 .sm-card {
