--- a/stylesheets/scss/components/_functions.scss
+++ b/stylesheets/scss/components/_functions.scss
@@ -33,3 +33,11 @@
 		@return $number;
 	}
 }
+
+@function in_array($value, $array) {
+	@if index($array, $value) {
+		@return true;
+	} @else {
+		@return false;
+	}
+}
