--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -6,10 +6,11 @@ html, body {
 	margin: 0;
 	padding: 0;
 
+	::-moz-selection { background: $select-background; }
+	::selection { background: $select-background; }
+
 	div {
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		box-sizing: border-box;
+		@include box-sizing(border-box);
 	}
 
 	a {
@@ -47,13 +48,7 @@ html, body {
 	}
 
 	div, header, main, footer {
-		-webkit-transition: width 300ms ease-in-out, height 300ms ease-in-out, font-size 300ms ease-in-out, top 300ms ease-in-out, padding 300ms ease-in-out;
-		-moz-transition: width 300ms ease-in-out, height 300ms ease-in-out, font-size 300ms ease-in-out, top 300ms ease-in-out, padding 300ms ease-in-out;
-		-o-transition: width 300ms ease-in-out, height 300ms ease-in-out, font-size 300ms ease-in-out, top 300ms ease-in-out, padding 300ms ease-in-out;
-		transition: width 300ms ease-in-out, height 300ms ease-in-out, font-size 300ms ease-in-out, top 300ms ease-in-out, padding 300ms ease-in-out;
 
-		::-moz-selection { background: $cyan-a100; }
-		::selection { background: $cyan-a100; }
 	}
 
 	.sm-circle {
