--- a/stylesheets/scss/components/_sidenav.scss
+++ b/stylesheets/scss/components/_sidenav.scss
@@ -4,6 +4,8 @@
  * https://www.google.com/design/spec/components/dividers.html#dividers-types-of-dividers
  * http://www.google.com/design/spec/layout/structure.html#structure-side-nav
  * http://www.google.com/design/spec/patterns/navigation-drawer.html
+ * TODO Make profile drop down button
+ * TODO Fix margin right on left menu for mobile
  */
 
 .sm-sidenav {
