--- a/stylesheets/scss/components/_sliders.scss
+++ b/stylesheets/scss/components/_sliders.scss
@@ -1,3 +1,10 @@
+/**************************************
+ * Sliders
+ *
+ * http://www.google.com/design/spec/components/sliders.html
+ * TODO Fix styling
+ **************************************/
+
 input[type="range"].sm-slider {
 	-webkit-appearance: none;
 	outline: none;
