--- a/stylesheets/scss/components/_textfields.scss
+++ b/stylesheets/scss/components/_textfields.scss
@@ -3,6 +3,11 @@
  *
  * http://www.google.com/design/spec/components/text-fields.html
  * TODO Fix label click on single-line input
+ * TODO add select
+ * TODO add auto complete select
+ * TODO add auto complete input
+ * TODO add slide out search
+ * TODO add drop down search
  **************************************/
 
 // Floating inputs
