--- a/stylesheets/scss/components/_tables.scss
+++ b/stylesheets/scss/components/_tables.scss
@@ -3,6 +3,8 @@
  *
  * http://www.google.com/design/spec/components/data-tables.html
  * TODO Fix styling
+ * TODO add table titles
+ * TODO add pagination
  **************************************/
 
 table {
