--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -29,3 +29,4 @@
 @import 'components/selection'; // Used to style selection controls (checkbox, radio button, switch) (can be turned off)
 @import 'components/textfields'; // Used to style input (can be turned off)
 @import 'components/progress'; // Used to style progress and activity indicators (can be turned off)
+@import 'components/dialogs'; // Used to style dialog (can be turned off)
