--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -6,6 +6,10 @@ html, body {
 	margin: 0;
 	padding: 0;
 
+	h1, h2, h3, h4, h5, h6 {
+		word-wrap: break-word;
+	}
+
 	::-moz-selection { background: $select-background; }
 	::selection { background: $select-background; }
 
