--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -13,7 +13,7 @@ html, body {
 	::-moz-selection { background: $select-background; }
 	::selection { background: $select-background; }
 
-	div {
+	* {
 		@include box-sizing(border-box);
 	}
 
@@ -32,7 +32,7 @@ html, body {
 	}
 
 	main {
-		position: absolute;
+		position: fixed;
 		padding: remCalc($gutter);
 		right: 0;
 		bottom: 0;
@@ -51,10 +51,6 @@ html, body {
 		}
 	}
 
-	div, header, main, footer {
-
-	}
-
 	.sm-circle {
 		border-radius: 50%;
 	}
@@ -68,8 +64,12 @@ html, body {
 	}
 
 	.sm-center {
-		text-align: center;
+		text-align: left;
 		vertical-align: middle;
+
+		@media #{$small-up} {
+			text-align: center;
+		}
 	}
 
 	/**********************************
