--- a/stylesheets/scss/components/_snackbars.scss
+++ b/stylesheets/scss/components/_snackbars.scss
@@ -1,3 +1,8 @@
+/**************************************
+ * Snackbars & toasts
+ *
+ * http://www.google.com/design/spec/components/snackbars-toasts.html
+ **************************************/
 .sm-snackbar {
 	left: 0;
 	right: 0;
