--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -30,3 +30,4 @@
 @import 'components/textfields'; // Used to style input (can be turned off)
 @import 'components/progress'; // Used to style progress and activity indicators (can be turned off)
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
+@import 'components/bottom-sheet'; // Used to style bottom sheet / modal (can be turned off)
